# TweetGram

./: .dockerignore  .env.example  .gitignore  LICENSE.txt  README.MD  pyproject.toml  requirements.txt
deploy/: Dockerfile  docker-compose.yml  entrypoint.sh  healthcheck.py
docs/: architecture.md  command_reference.md  deployment.md  failure_recovery.md  mongodb_schema.md  operations_runbook.md
scripts/: cleanup_temp_storage.py  init_indexes.py  verify_environment.py
tests/unit/: test_account_manager.py  test_checkpoint_service.py  test_command_parsing.py  test_gemini_provider.py  test_llm_command.py  test_llm_registry.py  test_retry_service.py  test_telegram_publisher.py  test_twscrape_adapter.py  test_worker_checkpoint.py  test_worker_pool.py
tweetgrambot/app/: bootstrap.py  main.py
tweetgrambot/app/bot/: authorization.py  telegram_bot.py
tweetgrambot/app/config/: environment.py  settings.py
tweetgrambot/app/core/: account_manager.py  job_runner.py  models.py  worker.py  worker_pool.py
tweetgrambot/app/database/: mongo.py  transactions.py
tweetgrambot/app/services/: alert_service.py  checkpoint_service.py  media_downloader.py  post_extractor.py  proxy_manager.py  retry_service.py  telegram_publisher.py  twscrape_adapter.py
twitter_telegram_bot/: __init__.py
twitter_telegram_bot/app/: bootstrap.py  main.py
twitter_telegram_bot/app/bot/: telegram_bot.py
twitter_telegram_bot/app/config/: constants.py  settings.py
twitter_telegram_bot/app/core/: account_manager.py  job_runner.py  worker.py  worker_pool.py  worker_state.py
(+53 files in other folders)
